implement message endpoints
