# src/routes/mod.rs
@@ -10,5 +10,6 @@ pub mod channels;
 pub mod guilds;
 pub mod invites;
 pub mod members;
+pub mod messages;
 pub mod roles;
 pub mod users;
